--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "7.45.4",
     "react-router-dom": "5.3.4",
     "sharp": "^0.33.1",
+    "sslcommerz-lts": "^1.1.0",
     "stripe": "^10.2.0"
   },
   "devDependencies": {
