get order and make payment with sslcommerz

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "activityBar.background": "#471716",
         "titleBar.activeBackground": "#64211F",
         "titleBar.activeForeground": "#FEFBFB"
-    }
+    },
+    "cSpell.words": [
+        "sslcommerz"
+    ]
 }
