--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload/payload.config.ts payload"
   },
   "dependencies": {
+    "@next/third-parties": "^14.0.4",
     "@payloadcms/bundler-webpack": "^1.0.0",
     "@payloadcms/db-mongodb": "^1.0.0",
     "@payloadcms/plugin-cloud": "^2.0.0",
@@ -36,7 +37,7 @@
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
-    "next": "13.5.2",
+    "next": "^14.0.4",
     "order-id": "^2.1.2",
     "payload": "^2.0.7",
     "payload-admin-bar": "^1.0.6",
