--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     ],
     "paths": {
       "react": ["./node_modules/@types/react"],
+      "@next/third-parties/google": [ "./node_modules/@next/third-parties/dist/google" ] 
     }
   },
   "include": [
