--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "cSpell.words": [
         "bkash",
         "sslcommerz",
-        "Uddokta"
+        "Uddokta",
+        "UDDOKTAPAY"
     ]
 }
