--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     },
     "cSpell.words": [
         "bkash",
+        "GUESTORDER",
+        "GUESTORDERS",
         "sslcommerz",
         "Uddokta",
         "UDDOKTAPAY"
